--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>John D. Kanu</h1>
-				<p>Ph.D. student in Computer Science <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+				<p>Ph.D. student in Computer Science. <a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
