--- a/index.html
+++ b/index.html
@@ -11,13 +11,12 @@
         		<li><a href="/">Home</a></li>
 	        	<li><a href="/about">About</a></li>
         		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
     		</ul>
 		</nav>
 		<div class="container">
     		<div class="blurb">
         		<h1>John D. Kanu</h1>
-				<p>Ph.D. student in Computer Science. <a href="/about">Read more about my life...</a></p>
+				<p>I am a 2nd-year graduate student in <a href="https://www.cs.umd.edu/">Computer Science</a> at the <a href="https://www.umd.edu/">University of Maryland, College Park</a>, co-advised by Proffesors William C. Regli and Yiannis Aloimonos.</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
