--- a/index.html
+++ b/index.html
@@ -6,24 +6,15 @@
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
 	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-    		</ul>
-		</nav>
 		<div class="container">
     		<div class="blurb">
         		<h1>John D. Kanu</h1>
-				<p>I am a 2nd-year graduate student in <a href="https://www.cs.umd.edu/">Computer Science</a> at the <a href="https://www.umd.edu/">University of Maryland, College Park</a>, co-advised by Proffesors William C. Regli and Yiannis Aloimonos.</p>
+				<p>I am a 2nd-year graduate student in <li><a href="https://www.cs.umd.edu/">Computer Science</a></li> at the <li><a href="https://www.umd.edu/">University of Maryland, College Park</a></li>, co-advised by Proffesors William C. Regli and Yiannis Aloimonos.</p>
+				<p>CV / Google Scholar / <li><a href="GitHub">github.com/jdkanu</a></li></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
-    		<ul>
-        		<li><a href="mailto:jdkanu@cs.umd.edu">email</a></li>
-        		<li><a href="https://github.com/jdkanu">github.com/jdkanu</a></li>
-			</ul>
+		  Last updated Dec 19, 2019
 		</footer>
 	</body>
 </html>
