--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>John D. Kanu</h1>
-				<p>I am a 2nd-year graduate student in <li><a href="https://www.cs.umd.edu/">Computer Science</a></li> at the <li><a href="https://www.umd.edu/">University of Maryland, College Park</a></li>, co-advised by Proffesors William C. Regli and Yiannis Aloimonos.</p>
+				<p>I am a 2nd-year graduate student in <li><a href="https://www.cs.umd.edu/">Computer Science</a></li> at the <li><a href="https://www.umd.edu/">University of Maryland, College Park</a></li>, co-advised by Professors William C. Regli and Yiannis Aloimonos.</p>
 				<p>CV / Google Scholar / <li><a href="GitHub">github.com/jdkanu</a></li></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
