--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>John D. Kanu</h1>
-				<p>I am a 2nd-year graduate student in <a href="https://cs.umd.edu/">Computer Science</a> at the <a href="https://umd.edu/">University of Maryland, College Park</a>, co-advised by Professors William C. Regli and Yiannis Aloimonos. I am interested in robotic learning and planning.</p>
+				<p>I am a 2nd-year graduate student in <a href="https://cs.umd.edu/">Computer Science</a> at the <a href="https://umd.edu/">University of Maryland, College Park</a>, co-advised by Professors William C. Regli and Yiannis Aloimonos. I am interested in the intersection of artificial intelligence, machine learning, and robotics.</p>
 				<p>CV / <a href="https://scholar.google.com/citations?user=8J8c0BsAAAAJ">Google Scholar</a> / <a href="https://github.com/jdkanu">GitHub</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
