--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 				<p>CV / <a href="https://scholar.google.com/citations?user=8J8c0BsAAAAJ">Google Scholar</a> / <a href="https://github.com/jdkanu">GitHub</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
-		<footer>
+		<footer align="right">
 		  Last updated Dec 19, 2019
 		</footer>
 	</body>
