--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<body>
 		<div class="container">
     		<div class="blurb">
-    		    <img src="NASA-Apollo8-Dec24-Earthrise.png" style="float:right" alt="Earthrise">
+    		    <img src="NASA-Apollo8-Dec24-Earthrise.png" style="float:right" alt="Earthrise" height="100" width="100">
         		<h1>John D. Kanu</h1>
         		<h2>jdkanu@cs.umd.edu</h2>
 				<p>I am a 2nd-year graduate student in <a href="https://cs.umd.edu/">Computer Science</a> at the <a href="https://umd.edu/">University of Maryland, College Park</a>. I am co-advised by Professors William C. Regli and Yiannis Aloimonos. I am interested in the intersection of artificial intelligence, machine learning, and robotics.</p>
