--- a/index.html
+++ b/index.html
@@ -13,10 +13,15 @@
         		<h2>jdkanu at cs dot umd dot edu</h2>
 				<p>I am a 2nd-year graduate student in <a href="https://cs.umd.edu/">Computer Science</a> at the <a href="https://umd.edu/">University of Maryland, College Park</a>. I am co-advised by Professors William C. Regli and Yiannis Aloimonos. I am interested in the intersection of artificial intelligence, machine learning, and robotics.</p>
 				<p>CV / <a href="https://scholar.google.com/citations?user=8J8c0BsAAAAJ">Google Scholar</a> / <a href="https://github.com/jdkanu">GitHub</a></p>
+				<h2>Teaching</h2>
+				<div class="row">
+				  <div class="column">col 1</div>
+				  <div class="column">col 2</div>
+				</div>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
-		  Last updated Dec 19, 2019
+		  Last updated Dec 20, 2019
 		</footer>
 	</body>
 </html>
