--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     		<div class="blurb">
     		    <img src="NASA-Apollo8-Dec24-Earthrise.png" style="float:right" alt="Earthrise" height="150" width="150">
         		<h1>John D. Kanu</h1>
-        		<h2>jdkanu at cs dot umd dot edu</h2>
+        		<p>jdkanu<code>@</code>cs.umd.edu</p>
 				<p>I am a 2nd-year graduate student in <a href="https://cs.umd.edu/">Computer Science</a> at the <a href="https://umd.edu/">University of Maryland, College Park</a>. I am co-advised by Professors William C. Regli and Yiannis Aloimonos. I am interested in the intersection of artificial intelligence, machine learning, and robotics.</p>
 				<p>CV / <a href="https://scholar.google.com/citations?user=8J8c0BsAAAAJ">Google Scholar</a> / <a href="https://github.com/jdkanu">GitHub</a></p>
 				<h2>Teaching</h2>
