--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<h2>Teaching</h2>
 				<div class="row">
 				  <div class="column"><img src="imgs/svm.png" style="float:right" alt="Earthrise" height="150" width="150"></div>
-				  <div class="column">col 2</div>
+				  <div class="column"><p>CMSC422: Introduction to Machine Learning</p></div>
 				</div>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
