--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 				<p>I am a 2nd-year graduate student in <a href="https://cs.umd.edu/">Computer Science</a> at the <a href="https://umd.edu/">University of Maryland, College Park</a>. I am co-advised by Professors William C. Regli and Yiannis Aloimonos. I am interested in the intersection of artificial intelligence, machine learning, and robotics.</p>
 				<p>CV / <a href="https://scholar.google.com/citations?user=8J8c0BsAAAAJ">Google Scholar</a> / <a href="https://github.com/jdkanu">GitHub</a></p>
 				<h2>Teaching</h2>
-		      <div class="column"><p><img src="imgs/svm.png" style="float:right" alt="Earthrise" height="150" width="150"></p></div>
-		      <div class="column"><p>CMSC422: Introduction to Machine Learning</p></div>
+				  <p>
+		      <div class="column"><img src="imgs/svm.png" style="float:right" alt="Earthrise" height="150" width="150"></div>
+		      <div class="column">CMSC422: Introduction to Machine Learning</div>
+		      </p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
