--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<h2>Teaching</h2>
 				  <div class="row">
 		        <div class="column"><img src="imgs/svm.png" style="float:left" alt="Earthrise" height="150" width="150"></div>
-		        <div class="column">CMSC422: Introduction to Machine Learning</div>
+		        <div class="column"><h2>CMSC422: Introduction to Machine Learning</h2></div>
 		      </div>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
