--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
 		        <div class="column"><img src="imgs/svm.png" style="float:left" alt="Earthrise" height="150" width="150"></div>
 		        <div class="column">CMSC422: Introduction to Machine Learning</div>
 		      </div>
+		      <div class="row">
+		        <div class="column"><img src="imgs/svm.png" style="float:left" alt="Earthrise" height="150" width="150"></div>
+		        <div class="column">CMSC422: Introduction to Machine Learning</div>
+		      </div>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
