--- a/index.html
+++ b/index.html
@@ -16,12 +16,28 @@
 				<h2>Teaching</h2>
 				  <div class="row">
 		        <div class="column"><img src="imgs/svm.png" style="float:left" alt="Earthrise" height="150" width="150"></div>
-		        <div class="column"><p>CMSC422: Introduction to Machine Learning<br /></p></div>
+		        <div class="column">
+		          <p>
+		            <a href="https://cmsc422.github.io/">CMSC422: Introduction to Machine Learning</a><br />
+		            Graduate Teaching Assistant<br />
+		            Professor William Regli<br />
+		            University of Maryland, College Park<br />
+		          </p>
+		        </div>
 		      </div>
+		      
 		      <div class="row">
 		        <div class="column"><img src="imgs/svm.png" style="float:left" alt="Earthrise" height="150" width="150"></div>
-		        <div class="column"><p>CMSC422: Introduction to Machine Learning<br /></p></div>
+		        <div class="column">
+		          <p>
+		            <a href="https://cmsc422.github.io/">CMSC422: Introduction to Machine Learning</a><br />
+		            Graduate Teaching Assistant<br />
+		            Professor William Regli<br />
+		            University of Maryland, College Park<br />
+		          </p>
+		        </div>
 		      </div>
+		      
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
