--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 		        <div class="column"><img src="imgs/svm.png" style="float:left" alt="Earthrise" height="150" width="150"></div>
 		        <div class="column">
 		          <p>
-		            <a href="https://cmsc422.github.io/">CMSC422: Introduction to Machine Learning</a><br />
+		            <a href="http://www.cs.umd.edu/class/spring2019/cmsc422-0201/">CMSC422: Introduction to Machine Learning</a><br />
 		            Graduate Teaching Assistant<br />
-		            Professor William Regli<br />
+		            Professor James Reggia<br />
 		            University of Maryland, College Park<br />
 		          </p>
 		        </div>
