--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 		        <div class="column"><img src="imgs/svm.png" style="float:left" alt="Earthrise" height="150" width="150"></div>
 		        <div class="column">
 		          <p>
-		            CMSC422: Introduction to Machine Learning<br />
+		            <a href="https://piazza.com/class/is67f4dv6d42hw">CMSC422: Introduction to Machine Learning</a><br />
 		            Undergraduate Teaching Assistant<br />
 		            Professor V.S. Subrahmanian<br />
 		            University of Maryland, College Park<br />
