--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		      </div>
 		      
 		      <div class="row">
-		        <div class="column"><img src="imgs/svm.png" style="float:left" alt="Earthrise" height="150" width="150"></div>
+		        <div class="column"><img src="imgs/chess.png" style="float:left" alt="Earthrise" height="150" width="150"></div>
 		        <div class="column">
 		          <p>
 		            <a href="http://www.cs.umd.edu/class/spring2018/cmsc421/">CMSC421: Introduction to Artificial Intelligence</a><br />
@@ -68,7 +68,7 @@
 		      </div>
 		      
 		      <div class="row">
-		        <div class="column"><img src="imgs/svm.png" style="float:left" alt="Earthrise" height="150" width="150"></div>
+		        <div class="column"><img src="imgs/chess.png" style="float:left" alt="Earthrise" height="150" width="150"></div>
 		        <div class="column">
 		          <p>
 		            <a href="http://www.cs.umd.edu/class/spring2017/cmsc421">CMSC421: Introduction to Artificial Intelligence</a><br />
