--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<h2>Publications</h2>
 				
 				  <div class="row">
-		        <div class="column"><img src="imgs/svm.png" style="float:left" alt="Earthrise" height="150" width="150"></div>
+		        <div class="column"><img src="imgs/doa.png" style="float:left" alt="Earthrise" height="150" width="150"></div>
 		        <div class="column">
 		          <p>
 		            <a href="http://www.cs.umd.edu/class/spring2019/cmsc422-0201/">CMSC422: Introduction to Machine Learning</a><br />
