--- a/index.html
+++ b/index.html
@@ -28,11 +28,8 @@
 		        <div class="column"><img src="imgs/doa.png" style="float:left" alt="Earthrise" height="150" width="150"></div>
 		        <div class="column">
 		          <p>
-		            <a href="http://www.cs.umd.edu/class/spring2019/cmsc422-0201/">CMSC422: Introduction to Machine Learning</a><br />
-		            Graduate Teaching Assistant<br />
-		            Professor James Reggia<br />
-		            University of Maryland, College Park<br />
-		            Spring 2019<br />
+		            <a href="https://arxiv.org/abs/1904.08452">CMSC422: Introduction to Machine Learning</a><br />
+		            Zhenyu Tang, John D. Kanu, Kevin Hogan, Dinesh Manocha. Interspeech 2019. [<a href="https://arxiv.org/abs/1904.08452">arXiv</a>] [<a href="https://github.com/RoyJames/doa-release">code</a>]<br />
 		          </p>
 		        </div>
 		      </div>
