--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		        <div class="column"><img src="imgs/doa.png" style="float:left" alt="Earthrise" height="150" width="150"></div>
 		        <div class="column">
 		          <p>
-		            <a href="https://arxiv.org/abs/1904.08452">CMSC422: Introduction to Machine Learning</a><br />
+		            <a href="https://arxiv.org/abs/1904.08452">Regression and Classification for Direction-of-Arrival Estimation with Convolutional Recurrent Neural Networks</a><br />
 		            Zhenyu Tang, John D. Kanu, Kevin Hogan, Dinesh Manocha. Interspeech 2019. [<a href="https://arxiv.org/abs/1904.08452">arXiv</a>] [<a href="https://github.com/RoyJames/doa-release">code</a>]<br />
 		            We present a novel learning-based approach to estimate the direction-of-arrival (DOA) of a sound source using a convolutional recurrent neural network (CRNN) trained via regression on synthetic data and Cartesian labels. We also describe an improved method to generate synthetic data to train the neural network using state-of-the-art sound propagation algorithms that model specular as well as diffuse reflections of sound. We compare our model against three other CRNNs trained using different formulations of the same problem: classification on categorical labels, and regression on spherical coordinate labels. In practice, our model achieves up to 43% decrease in angular error over prior methods. The use of diffuse reflection results in 34% and 41% reduction in angular prediction errors on LOCATA and SOFA datasets, respectively, over prior methods based on image-source methods. Our method results in an additional 3% error reduction over prior schemes that use classification based networks, and we use 36% fewer network parameters.<br />
 		          </p>
