--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<h2>Preprints</h2>
 				
 				  <div class="row">
-		        <div class="column"><img src="imgs/doa.png" style="float:left" alt="Earthrise" height="150" width="150"></div>
+		        <div class="column"><img src="imgs/ifig.png" style="float:left" alt="Earthrise" height="150" width="150"></div>
 		        <div class="column">
 		          <p>
 		            <a href="https://arxiv.org/abs/1904.08452">Following Instructions by Imagining and Reaching Visual Goals</a><br />
