--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 		            Graduate Teaching Assistant<br />
 		            Professor James Reggia<br />
 		            University of Maryland, College Park<br />
-		            Spring 2019<br />
+		            Spring 2019<br /><br />
 		          </p>
 		        </div>
 		      </div>
@@ -71,7 +71,7 @@
 		            Graduate Teaching Assistant<br />
 		            Professor William Regli<br />
 		            University of Maryland, College Park<br />
-		            Fall 2018<br />
+		            Fall 2018<br /><br />
 		          </p>
 		        </div>
 		      </div>
@@ -84,7 +84,7 @@
 		            Undergraduate Teaching Assistant<br />
 		            Professor James Reggia<br />
 		            University of Maryland, College Park<br />
-		            Spring 2018<br />
+		            Spring 2018<br /><br />
 		          </p>
 		        </div>
 		      </div>
@@ -97,7 +97,7 @@
 		            Undergraduate Teaching Assistant<br />
 		            Professor James Reggia<br />
 		            University of Maryland, College Park<br />
-		            Fall 2017<br />
+		            Fall 2017<br /><br />
 		          </p>
 		        </div>
 		      </div>
@@ -110,7 +110,7 @@
 		            Undergraduate Teaching Assistant<br />
 		            Professor Don Perlis<br />
 		            University of Maryland, College Park<br />
-		            Spring 2017<br />
+		            Spring 2017<br /><br />
 		          </p>
 		        </div>
 		      </div>
@@ -123,7 +123,7 @@
 		            Undergraduate Teaching Assistant<br />
 		            Professor V.S. Subrahmanian<br />
 		            University of Maryland, College Park<br />
-		            Fall 2016<br />
+		            Fall 2016<br /><br />
 		          </p>
 		        </div>
 		      </div>
