--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				    </p>
 				    
 				    <p>
-				      <a href="pdfs/cv.pdf">CV</a> / <a href="https://scholar.google.com/citations?user=8J8c0BsAAAAJ">Google Scholar</a> / <a href="https://github.com/jdkanu">GitHub</a><br /><br />
+				      <a href="https://scholar.google.com/citations?user=8J8c0BsAAAAJ">Google Scholar</a> / <a href="https://github.com/jdkanu">GitHub</a><br /><br />
 				    </p>
 				
 				<h2>Preprints</h2>
